# letta-backend

./: .env.example  .gitignore  Dockerfile  Makefile.sh  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 09cb3f303406_signup_update.py  249b35b24d84_initial_schema.py  a1c0f4d8b901_section9_indexes_part1.py  a7ee4ca1bc85_polls_and_votes.py  ae7f42741725_models_update.py  b2f9d5a7132a_message_soft_delete.py  b8ff5db2cd96_section9_indexes_part2.py  c3aa0e6c8841_member_disappear_timer.py  d4bb1f7e9952_statuses_and_views.py  e5cc2a809a63_pinned_messages.py  f6dd3b90ab74_calls_table.py
app/: ANDROID_CLIENT_SPEC.md  config.py  database.py  main.py  models.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/contacts/: router.py  schemas.py  service.py
app/core/: cleanup.py  encryption.py
app/dashboard/: router.py
app/groups/: router.py  schemas.py  service.py
app/media/: router.py  spaces.py
app/messaging/: anxiety.py  connection.py  delete.py  pins.py  polls.py  preview.py  reactions.py  router.py  schemas.py  search.py  service.py  sessions.py
app/notifications/: fcm.py
app/statuses/: router.py
